[dependencies.futures]
version = "0.3.1"

[dependencies.parking_lot]
version = "=0.12"

[dependencies.pin-utils]
version = "0.1.0"
[dev-dependencies.async-std]
version = "1.0"

[package]
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Abstraction over std::time::Instant and futures-timer that works on WASM"
edition = "2018"
license = "MIT"
name = "wasm-timer"
repository = "https://github.com/tomaka/wasm-timer"
version = "0.2.5"
[target."cfg(all(target_arch = \"wasm32\", target_os = \"unknown\"))".dependencies.js-sys]
version = "0.3.31"

[target."cfg(all(target_arch = \"wasm32\", target_os = \"unknown\"))".dependencies.parking_lot]
features = ["wasm-bindgen"]
version = "0.11"

[target."cfg(all(target_arch = \"wasm32\", target_os = \"unknown\"))".dependencies.wasm-bindgen]
version = "0.2.37"

[target."cfg(all(target_arch = \"wasm32\", target_os = \"unknown\"))".dependencies.wasm-bindgen-futures]
version = "0.4.4"

[target."cfg(all(target_arch = \"wasm32\", target_os = \"unknown\"))".dependencies.web-sys]
features = ["Performance", "Window", "WorkerGlobalScope"]
version = "0.3.31"
